Use Java.util.Base64 intead of internal Sun API
-Finally got removed